--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,3 +31,93 @@ body {
     text-wrap: balance;
   }
 }
+.lh-1 {
+  line-height: 1;
+}
+
+.btn {
+  color: #FFF;
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: capitalize;
+  padding: 20px 30px;
+  border-radius: 12px;
+}
+.border-onehalf {
+  border: 1.5px solid rgba(168, 168, 168, 0.35);
+}
+.container {
+  max-width: 1538px;
+  padding-inline: 20px;
+  margin-inline: auto;
+}
+.cover {
+  object-fit: cover;
+}
+.video-thumb-slider {
+  margin-inline: -9px;
+}
+.video-item {
+  padding-bottom: 41.723%;
+  position: relative;
+}
+.video-item-thumb {
+  position: relative;
+  padding-bottom: 53.34%;
+}
+.img-absolute {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+}
+.text-gradient {
+  background: linear-gradient(90deg, #8C7630 28.77%, rgba(194, 181, 96, 0) 237%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.content-boxx:before {
+  content: "";
+  position: absolute;
+  border: 2.076px solid rgba(255, 255, 255, 0.15);
+  top: -100px;
+  left: -100px;
+  width: calc(100% + 200px);
+  border-radius: 100%;
+  height: calc(100% + 200px);
+}
+.content-boxx:after {
+  content: "";
+  position: absolute;
+  border-radius: 100%;
+  border: 2.076px solid rgba(255, 255, 255, 0.15);
+  top: -340px;
+  left: -340px;
+  width: calc(100% + 680px);
+  height: calc(100% + 680px);
+}
+.content-boxx {
+  border-radius: 100%;
+}
+.form-control {
+  border-radius: 12px;
+  border: 2px solid #C4C4C4;
+  padding: 15px 20px;
+  line-height: 22px;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .col-image, .col-form {
+    width: 100%;
+    max-width: 667px;
+}
+.form-control {
+  padding: 24px;
+}
+}
